# ios-fastapi-selfhosted

./: .cursorignore  .env.example  .gitignore  .mise.toml  AGENTS.md  CLAUDE.md  Makefile  README.md  distribution-setup.md  docker-compose.yml  local-setup.md  notes.txt
.claude/: settings.json
.cursor/: mcp.json.example
.github/: CI_GITHUB_SECRETS.md
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_is_pro.py  003_fix_index_names.py
backend/app/: exception_handlers.py  exceptions.py  logging_config.py  main.py
backend/app/api/v1/: auth.py  notes.py  router.py  webhooks.py
backend/app/core/: auth.py  config.py  rate_limit.py
backend/app/db/: models.py  session.py
backend/app/middleware/: __init__.py  access_log.py  auth_context.py  request_id.py
backend/app/repositories/: __init__.py  notes_repo.py  placeholder_repo.py  profile_repo.py  refresh_token_repo.py  user_repo.py
backend/app/schemas/: __init__.py  auth.py  notes.py  placeholder.py  profile.py
backend/app/services/: __init__.py  auth_service.py  notes_service.py  placeholder_service.py  resend_email.py
backend/app/utils/: __init__.py  log_context.py
backend/tests/: README.md  __init__.py  conftest.py  test_smoke.py
backend/tests/api/: README.md  jwt_route_helpers.py  test_auth_routes.py  test_auth_routes_logic.py  test_health.py  test_notes_routes.py  test_v1_ping.py
backend/tests/integration/: README.md  conftest.py  test_auth_flow.py  test_migration_drift.py  test_notes_flow.py  test_profile_flow.py
backend/tests/unit/: README.md  conftest.py  test_auth_rate_limits.py  test_auth_service.py  test_config.py  test_exception_handlers.py  test_notes_service.py  test_resend_email.py  test_session.py
backend/tests/unit/test_services/: README.md
docs/: index.html
ios/: README.md
notes/: dev-local.md  ios-tuist-simulator-run.md  makefile.md  scripts.md
scripts/: _lib.sh  check-deps.sh  dev-logs.sh  dev.sh  e2e-test.sh  ios-device.sh  ios-sim.sh  mcp-postgres-local.sh  rename-project.sh  setup-dist.sh  smoke-test.sh  sync_models.py  tunnel.sh  verify-full-stack.sh
supabase/: config.toml  seed.sql
(+63 files in other folders)
